deployments/prometheus/templates/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "grafana-letsencrypt"
spec:
  tls:
    - hosts:
      - monitoring.roundtable.lsst.codes
      secretName: grafana-ingress-tls
  rules:
    - host: monitoring.roundtable.lsst.codes
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-grafana
              servicePort: 80
